@@ -4,6 +4,7 @@ import pl.piomin.services.department.model.Department;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class DepartmentRepository {
 
@@ -29,7 +30,7 @@ public class DepartmentRepository {
 	public List<Department> findByOrganization(Long organizationId) {
 		return departments.stream()
 				.filter(a -> a.getOrganizationId().equals(organizationId))
-				.toList();
+				.collect(Collectors.toList());
 	}
 	
 }
